--- a/style.css
+++ b/style.css
@@ -19,10 +19,11 @@
 	left:42%;
 }
 .metxt{
-	margin-top: 15%;
+	margin-top: 28%;
 	text-align:center;
 	font-family:"Modern Sans";
 	font-size:150%;
+	color:black;
 }
 .linkfiller{
 	position:relative;
@@ -30,7 +31,7 @@
 	left:0%;
 }
 .links{
-	margin-top: 15%;
+	margin-top: 22%;
 	list-style: none;
 }
 .links li a{
@@ -42,7 +43,7 @@
 	letter-spacing: 4px;
 	position: absolute;
 	text-align: left;
-	top: 185%;
+	top: 235%;
 	left: 10%;
 }
 .myworkfiller{
@@ -61,14 +62,14 @@ h3{
 	position:absolute;
 	text-align:right;
 	padding:5%;
-	top:180%;
+	top:245%;
 	right:22%;
 }
 .sunflowers{
 	position:absolute;
 	text-align:right;
 	padding:5%;
-	top:180%;
+	top:245%;
 	right:1%;
 }
 .sunflowerscopy{
@@ -105,4 +106,89 @@ header
 .proj{
 	margin-top:110px;
 	margin-left:100px;
+}
+.reslink{
+	border: 5px solid black;
+	padding: 10px;
+	margin:20px;
+}
+.aboutmelink{
+	border: 5px solid black;
+	padding: 10px;
+	margin-top:50px;
+	margin-left:38%;
+	margin-right:38%;
+}
+.reslink li a{
+	color: black;
+	text-decoration: none;
+}
+.aboutmelink li a{
+	color: black;
+	text-decoration: none;
+}
+.abtmetext{
+	padding:5px;
+	margin-top:5%;
+	margin-left:7%;
+	margin-right:7%;
+	margin-bottom:5%;
+	color:black;
+	font-family:"Seravek   ";
+	font-weight:lighter;
+}
+@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800,900');
+body {
+  font-family: 'Montserrat', sans-serif;
+  color: white;
+}
+
+.body {
+  display: grid;
+  grid-template-columns: 100%;
+  justify-items: center;
+  
+}
+
+.body-container {
+  width: 800px;
+  display: inline-grid;
+  grid-template-columns: 100%;
+  grid-template-rows: auto;
+}
+
+.body>div {
+  text-align: center;
+}
+
+.body .section {
+  display: inline-grid;
+  grid-template-columns: 140px 140px 140px 140px;
+  grid-template-rows: 140px 140px 140px 140px;
+  justify-items: center;
+  align-items: center;
+  grid-gap: 12px;
+  background: linear-gradient(to bottom, #ff9900 0%, #ff0066 65%, #333399 85%, #336699 100%);
+  margin: 30px 60px;
+  padding: 60px 30px;
+  border-radius: 0px;
+  justify-content: center;
+}
+
+.key-pad {
+  background: light grey;
+  border: 2px solid white;
+  border-radius: 12px;
+  height: 100%;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  align-items: center;
+  justify-content: center;
+  text-transform: lowercase;
+}
+
+.key-pad>h3 {
+  margin: 5px;
 }
