--- a/style.css
+++ b/style.css
@@ -3,24 +3,6 @@
 	margin:0;
 	padding: 0;
 }
-/* Mobile Styles*/
-@media only screen and (max-width:400px){
-	body{
-		background-color: red;
-	}
-}
-/* Tablet Styles*/
-@media only screen and (min-width:401px) and (max-width:960px){
-	body{
-		background-color: ;
-	}
-}
-/* Desktop Styles*/
-@media only screen and (min-width:961px){
-	body{
-		background-color: ;
-	}
-}
 .main{
 	position:relative;
 	top:0;
@@ -31,64 +13,675 @@
 	top:91%;
 	left:45%;
 }
-.name{
-	position: absolute;
-	top:0px;
-	left:42%;
+
+
+/* Mobile Styles*/
+@media only screen and (max-width:479px){
+	.name{
+			position: absolute;
+			top:0px;
+			left:42%;
+			width:25%;
+		}
+		.logotop img{
+			width: 8%;
+			height: auto;
+			margin-bottom: 30px;
+			padding: 0.1%;
+			float: left
+		}
+	/*------------MAIN PAGE------------*/
+	/*----Name introduction-index------*/
+	.metxt{
+		margin-top: 20%;
+		text-align:center;
+		font-family:"Modern Sans";
+		font-size:57%;
+		color:black;
+	}
+	h1{
+		font-size:275%;
+	}
+	h3{
+		letter-spacing:1.75px;
+	}
+	.aboutmelink{
+		border: 5px solid black;
+		text-align:center;
+		padding: 10px;
+		margin-top:50px;
+		margin-left:25%;
+		margin-right:25%;
+	}
+	/*-------------------------------*/
+	/*--------Samples-index----------*/
+	.samplelink li a{
+		padding:5%;
+		color: white;
+		text-decoration: none;
+		font-family: "Modern Sans";
+		font-size: 40px;
+		letter-spacing: 4px;
+		position: absolute;
+		text-align: left;
+		top: 75%;
+		left: 0%;
+		background:black;
+	}
+	.sample1{
+		position:absolute;
+		text-align:right;
+		padding:5%;
+		top:85%;
+		right:22%;
+		width: auto;
+		height:30%;
+	}
+	.sample2{
+		position:absolute;
+		text-align:right;
+		padding:5%;
+		top:85%;
+		right:0%;
+		width: auto;
+		height:30%;
+	}
+	.filler{
+		text-align:right;
+		position:absolute;
+		margin-top:41%;
+		margin-right:0%;
+		width:100%; 
+		height:5%;
+	}
+	.filler1{
+		text-align:right;
+		position:absolute;
+		margin-top:85%;
+		margin-right:0%;
+		width:100%; 
+		height:5%;
+	}
+	.filler2{
+		text-align:right;
+		position:absolute;
+		margin-top:60%;
+		margin-right:0%;
+		width:100%; 
+		height:5%;
+	}
+	.filler3{
+		text-align:right;
+		position:absolute;
+		margin-top:75%;
+		margin-right:0%;
+		width:100%; 
+		height:2%;
+	}
+	.filler4{
+		text-align:right;
+		position:absolute;
+		margin-top:35%;
+		margin-right:0%;
+		width:100%; 
+		height:5%;
+	}
+	.filler5{
+		text-align:right;
+		position:absolute;
+		margin-top:90%;
+		margin-right:0%;
+		width:100%; 
+		height:15%;
+	}
+	/*-------------------------------*/
+	/*-------------------------------*/
+	/*--------ABOUT ME PAGE----------*/
+	.abtmetext{
+		padding:5px;
+		margin-top:5%;
+		margin-left:7%;
+		margin-right:7%;
+		margin-bottom:5%;
+		color:black;
+		font-family:"Helvetica Neue";
+		font-weight:lighter;
+		text-align:left;
+		font-size:57%;
+	}
+	.i1{
+		float:left; 
+		width:100%; 
+		height:auto; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i2{
+		float:left; 
+		width:50%; 
+		height:38%; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i3{
+		float:left; 
+		width:50%; 
+		height:38%; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i4{
+		float:left; 
+		width:100%; 
+		height:auto; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i5{
+		float:left; 
+		width:auto; 
+		height:35%; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i6{
+		float:left; 
+		width:auto; 
+		height:35.1%; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i7{
+		float:left; 
+		width:auto; 
+		height:35.1%; 
+		margin-right:0%; 
+		margin-bottom:1%
+	}
+	/*-------------------------------*/
+	/*------SAMPLE WORK PAGE---------*/
+		.t1{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+		.t2{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+		.t3{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+		.t4{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+		.y1{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+		.y2{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+	/*-------------------------------*/
 }
-.metxt{
-	margin-top: 28%;
-	text-align:center;
-	font-family:"Modern Sans";
-	font-size:150%;
-	color:black;
+/* Tablet Styles*/
+@media only screen and (min-width:480px) and (max-width:960px){
+	.name{
+			position: absolute;
+			top:0px;
+			left:42%;
+			width:25%;
+		}
+		.logotop img{
+			width: 8%;
+			height: auto;
+			margin-bottom: 30px;
+			padding: 0.1%;
+			float: left
+		}
+	/*------------MAIN PAGE------------*/
+	/*----Name introduction-index------*/
+	.metxt{
+		margin-top: 20%;
+		text-align:center;
+		font-family:"Modern Sans";
+		font-size:57%;
+		color:black;
+	}
+	h1{
+		font-size:275%;
+	}
+	h3{
+		letter-spacing:1.75px;
+	}
+	.aboutmelink{
+		border: 5px solid black;
+		text-align:center;
+		padding: 10px;
+		margin-top:50px;
+		margin-left:25%;
+		margin-right:25%;
+	}
+	/*-------------------------------*/
+	/*--------Samples-index----------*/
+	.samplelink li a{
+		padding:5%;
+		color: white;
+		text-decoration: none;
+		font-family: "Modern Sans";
+		font-size: 40px;
+		letter-spacing: 4px;
+		position: absolute;
+		text-align: left;
+		top: 95%;
+		left: 0%;
+		background:black;
+	}
+	.sample1{
+		position:absolute;
+		text-align:right;
+		padding:5%;
+		top:104%;
+		right:22%;
+		width: auto;
+		height:53%;
+	}
+	.sample2{
+		position:absolute;
+		text-align:right;
+		padding:5%;
+		top:104%;
+		right:0%;
+		width: auto;
+		height:53%;
+	}
+	.filler{
+		text-align:right;
+		position:absolute;
+		margin-top:41%;
+		margin-right:0%;
+		width:100%; 
+		height:5%;
+	}
+	.filler1{
+		text-align:right;
+		position:absolute;
+		margin-top:85%;
+		margin-right:0%;
+		width:100%; 
+		height:5%;
+	}
+	.filler2{
+		text-align:right;
+		position:absolute;
+		margin-top:60%;
+		margin-right:0%;
+		width:100%; 
+		height:5%;
+	}
+	.filler3{
+		text-align:right;
+		position:absolute;
+		margin-top:75%;
+		margin-right:0%;
+		width:100%; 
+		height:2%;
+	}
+	.filler4{
+		text-align:right;
+		position:absolute;
+		margin-top:35%;
+		margin-right:0%;
+		width:100%; 
+		height:5%;
+	}
+	.filler5{
+		text-align:right;
+		position:absolute;
+		margin-top:90%;
+		margin-right:0%;
+		width:100%; 
+		height:15%;
+	}
+	/*-------------------------------*/
+	/*-------------------------------*/
+	/*--------ABOUT ME PAGE----------*/
+	.abtmetext{
+		padding:5px;
+		margin-top:5%;
+		margin-left:7%;
+		margin-right:7%;
+		margin-bottom:5%;
+		color:black;
+		font-family:"Helvetica Neue";
+		font-weight:lighter;
+		text-align:left;
+		font-size:57%;
+	}
+	.i1{
+		float:left; 
+		width:100%; 
+		height:auto; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i2{
+		float:left; 
+		width:50%; 
+		height:auto; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i3{
+		float:left; 
+		width:50%; 
+		height:50.65%; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i4{
+		float:left; 
+		width:100%; 
+		height:auto; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i5{
+		float:left; 
+		width:50%; 
+		height:auto; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i6{
+		float:left; 
+		width:100%; 
+		height:auto; 
+		margin-right:0%; 
+		margin-bottom:0%
+	}
+	.i7{
+		float:left; 
+		width:auto; 
+		height:35.1%; 
+		margin-right:0%; 
+		margin-bottom:1%
+	}
+	/*-------------------------------*/
+	/*------SAMPLE WORK PAGE---------*/
+		.t1{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+		.t2{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+		.t3{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+		.t4{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+		.y1{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+		.y2{
+			float:center; 
+			width:100%; 
+			height:auto%;
+			margin-left:0%;  
+			margin-right:0%; 
+			margin-bottom:1%
+		}
+	/*-------------------------------*/
+	
 }
-.linkfiller{
-	position:relative;
-	text-align:left;
-	left:0%;
-}
-.samplelink{
-	margin-top: 22%;
-}
-.samplelink li a{
-	padding:5%;
-	color: white;
-	text-decoration: none;
-	font-family: "Modern Sans";
-	font-size: 75px;
-	letter-spacing: 4px;
-	position: absolute;
-	text-align: left;
-	top: 235%;
-	left: 0%;
-	background:black;
-}
-.myworkfiller{
-	position:relative;
-	text-align:right;
-	top:0%;
-	right:0%;
-}
-h1{
-	font-size:245%;
-}
-h3{
-	letter-spacing:1.75px;
-}
-.sample1{
-	position:absolute;
-	text-align:right;
-	padding:5%;
-	top:245%;
-	right:22%;
-}
-.sample2{
-	position:absolute;
-	text-align:right;
-	padding:5%;
-	top:245%;
-	right:1%;
+/* Desktop Styles*/
+@media only screen and (min-width:961px){
+		.name{
+			position: absolute;
+			top:0px;
+			left:42%;
+		}
+		.logotop img{
+			width: 6%;
+			height: auto;
+			margin-bottom: 30px;
+			padding: 0.1%;
+			float: left
+		}
+		/*----Name introduction-index------*/
+		h1{
+			font-size:245%;
+		}
+		h3{
+			letter-spacing:1.75px;
+		}
+		.metxt{
+			margin-top: 28%;
+			text-align:center;
+			font-family:"Modern Sans";
+			font-size:150%;
+			color:black;
+		}
+		.aboutmelink{
+			border: 5px solid black;
+			padding: 10px;
+			margin-top:50px;
+			margin-left:38%;
+			margin-right:38%;
+		}
+		/*-------------------------------*/
+		/*--------Samples-index----------*/
+		.samplelink{
+			margin-top: 22%;
+		}
+		.samplelink li a{
+			padding:5%;
+			color: white;
+			text-decoration: none;
+			font-family: "Modern Sans";
+			font-size: 75px;
+			letter-spacing: 4px;
+			position: absolute;
+			text-align: left;
+			top: 235%;
+			left: 0%;
+			background:black;
+		}
+		.sample1{
+			position:absolute;
+			text-align:right;
+			padding:5%;
+			top:245%;
+			right:22%;
+			width: auto;
+			height:75%;
+		}
+		.sample2{
+			position:absolute;
+			text-align:right;
+			padding:5%;
+			top:245%;
+			right:1%;
+			width: auto;
+			height:75%;
+		}
+		.aboutmelink{
+			border: 5px solid black;
+			padding: 10px;
+			text-align:center;
+			margin-top:50px;
+			margin-left:40%;
+			margin-right:40%;
+		}
+		.filler img{
+			margin-top:0%;
+			margin-right:0%;
+			width:50%; 
+			height:auto;
+		}
+		/*-------------------------------*/
+		/*--------ABOUT ME PAGE----------*/
+		.abtmetext{
+			padding:5px;
+			margin-top:5%;
+			margin-left:7%;
+			margin-right:7%;
+			margin-bottom:5%;
+			color:black;
+			font-family:"Seravek";
+			font-weight:lighter;
+		}
+		.i1{
+			float:left; 
+			width:auto; 
+			height:72%; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.i2{
+			float:left; 
+			width:auto; 
+			height:35%; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.i3{
+			float:left; 
+			width:auto; 
+			height:35%; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.i4{
+			float:left; 
+			width:auto; 
+			height:35.1%; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.i5{
+			float:left; 
+			width:auto; 
+			height:35%; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.i6{
+			float:left; 
+			width:auto; 
+			height:35.1%; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.i7{
+			float:left; 
+			width:auto; 
+			height:35.1%; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		/*-------------------------------*/
+		/*------SAMPLE WORK PAGE---------*/
+		.proj{
+			margin-top:110px;
+			margin-left:100px;
+		}
+		.t1{
+			float:left; 
+			width:46%; 
+			height:auto; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.t2{
+			float:left; 
+			width:46%; 
+			height:auto; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.t3{
+			float:left; 
+			width:46%; 
+			height:auto; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.t4{
+			float:left; 
+			width:46%; 
+			height:auto; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.y1{
+			float:left; 
+			width:46%; 
+			height:auto; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		.y2{
+			float:left; 
+			width:46%; 
+			height:auto; 
+			margin-right:1%; 
+			margin-bottom:1%
+		}
+		/*-------------------------------*/
+	
 }
 header
 {
@@ -100,29 +693,6 @@ header
 	background-size:cover;
 	background-position:center;
 }
-.logotop img{
-	width: 60px;
-	height: auto;
-	margin-bottom: 30px;
-	padding: 5px;
-	float: left
-}
-.proj{
-	margin-top:110px;
-	margin-left:100px;
-}
-.reslink{
-	border: 5px solid black;
-	padding: 10px;
-	margin:20px;
-}
-.aboutmelink{
-	border: 5px solid black;
-	padding: 10px;
-	margin-top:50px;
-	margin-left:38%;
-	margin-right:38%;
-}
 a:link{
 	color:black;
 	text-decoration: none;
@@ -131,68 +701,56 @@ a:visited{
 	color:black;
 	text-decoration: none;
 }
-.abtmetext{
-	padding:5px;
-	margin-top:5%;
-	margin-left:7%;
-	margin-right:7%;
-	margin-bottom:5%;
-	color:black;
-	font-family:"Seravek";
-	font-weight:lighter;
-}
-@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800,900');
-body {
-  font-family: 'Montserrat', sans-serif;
-  color: white;
-}
+		@import url('https://fonts.googleapis.com/css?family=Montserrat:400,500,700,800,900');
+		body {
+  			font-family: 'Montserrat', sans-serif;
+  			color: white;
+		}
 
-.body {
-  display: grid;
-  grid-template-columns: 100%;
-  justify-items: center;
-  
-}
+		.body {
+  			display: grid;
+  			grid-template-columns: 100%;
+  			justify-items: center;
+		}
+		.body-container {
+  			width: 800px;
+  			display: inline-grid;
+  			grid-template-columns: 100%;
+  			grid-template-rows: auto;
+		}
 
-.body-container {
-  width: 800px;
-  display: inline-grid;
-  grid-template-columns: 100%;
-  grid-template-rows: auto;
-}
+		.body>div {
+  			text-align: center;
+		}
 
-.body>div {
-  text-align: center;
-}
+		.body .section {
+  			display: inline-grid;
+  			grid-template-columns: 140px 140px 140px 140px;
+  			grid-template-rows: 140px 140px 140px 140px;
+  			justify-items: center;
+  			align-items: center;
+  			grid-gap: 12px;
+  			background: linear-gradient(to bottom, #ff9900 0%, #ff0066 65%, #333399 85%, #336699 100%);
+  			margin: 30px 60px;
+  			padding: 60px 30px;
+  			border-radius: 0px;
+  			justify-content: center;
+		}
 
-.body .section {
-  display: inline-grid;
-  grid-template-columns: 140px 140px 140px 140px;
-  grid-template-rows: 140px 140px 140px 140px;
-  justify-items: center;
-  align-items: center;
-  grid-gap: 12px;
-  background: linear-gradient(to bottom, #ff9900 0%, #ff0066 65%, #333399 85%, #336699 100%);
-  margin: 30px 60px;
-  padding: 60px 30px;
-  border-radius: 0px;
-  justify-content: center;
-}
+		.key-pad {
+  			background: light grey;
+  			border: 2px solid white;
+  			border-radius: 12px;
+  			height: 100%;
+  			width: 100%;
+  			display: flex;
+  			flex-direction: column;
+  			flex-wrap: nowrap;
+  			align-items: center;
+  			justify-content: center;
+  			text-transform: lowercase;
+		}
 
-.key-pad {
-  background: light grey;
-  border: 2px solid white;
-  border-radius: 12px;
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  align-items: center;
-  justify-content: center;
-  text-transform: lowercase;
-}
-
-.key-pad>h3 {
-  margin: 5px;
-}
+		.key-pad>h3 {
+  			margin: 5px;
+		}
